--- a/TOC/design/18_2122/index.html
+++ b/TOC/design/18_2122/index.html
@@ -128,7 +128,7 @@
 <div class="responsive">
   <div class="gallery">
       <img src="13.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Yukihara Soma <hr/> Shokugeki no Soma</h2></div>
+	    <div class="desc"><h2>Yukihira Soma <hr/> Shokugeki no Soma</h2></div>
   </div>
 </div>
 <div class="responsive">
