--- a/TOC/design/19_2223/index.html
+++ b/TOC/design/19_2223/index.html
@@ -53,124 +53,130 @@
 <h1>Weekly Shonen Jump #22・23 2018 Group Cover Designs</h1>
 
 <div class="fullbody">
+
 <div class="responsive">
   <div class="gallery">
       <img src="01.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Luffy</h2></div>
+	    <div class="desc"><h2>Monkey D. Luffy <hr/> ONE PIECE </h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="02.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Deku</h2></div>
+	    <div class="desc"><h2>Midoriya Izuku <hr/> My Hero Academia</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="03.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Hinata Shoyo<hr/> Haikyu!!</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="04.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Emma <hr/> The Promised Neverland</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="05.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Asta <hr/> Black Clover</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="06.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Kamado Tanjiro <hr/> Kimetsu no Yaiba</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="07.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Furuhashi Fumino &amp; Ogata Rizu<hr/> We Never Learn</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="08.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Ishigami Senku <hr/> Dr.Stone</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="09.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Yukihira Soma <hr/> Shokugeki no Soma</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="10.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Itadori Yuji <hr/> Jujutsu Kaisen</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="11.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Yonagi Kei <hr/> act-age</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="12.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Yunohana Yuuna <hr/> Yuuna and the Haunted Hot Springs</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="13.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Ushio Hinomaru <hr/> Hinomaru Sumo</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="14.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Denji<hr/>Chainsaw Man</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="15.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>One Arata <hr/> ne0;lation</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="16.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Kagarite Higuma <hr/> Hell Warden Higuma</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="17.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Fujita Ryunosuke <hr/>The Last Saiyuki</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="18.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Kamio Yui <hr/> Yui Kamio Lets Loose</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="19.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>David<hr/>Teenage Renaissance! David</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="20.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Hinomoto Japan<hr/>I'm From Japan</h2></div>
+  </div>
+</div>
+  <div class="gallery" style="border: 2px solid red;">
+      <img src="19.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2>Kugi Taurus<hr/> Build King (One-Shot)</h2></div>
   </div>
 </div>
 </div><!-- end fullbody -->
@@ -178,124 +184,125 @@
 <p style="border-top: 2px solid red"> </p>
 
 <div class="headshot">
+
 <div class="responsive">
   <div class="gallery">
       <img src="01s.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Luffy</h2></div>
+	    <div class="desc"><h2>Monkey D. Luffy <hr/> ONE PIECE </h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="02s.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Deku</h2></div>
+	    <div class="desc"><h2>Midoriya Izuku <hr/> My Hero Academia</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="03s.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Hinata Shoyo<hr/> Haikyu!!</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="04s.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Emma <hr/> The Promised Neverland</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="05s.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Asta <hr/> Black Clover</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="06s.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Kamado Tanjiro <hr/> Kimetsu no Yaiba</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="07s.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Furuhashi Fumino &amp; Ogata Rizu<hr/> We Never Learn</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="08s.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Ishigami Senku <hr/> Dr.Stone</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="09s.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Yukihira Soma <hr/> Shokugeki no Soma</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="10s.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Itadori Yuji <hr/> Jujutsu Kaisen</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="11s.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Yonagi Kei <hr/> act-age</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="12s.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Yunohana Yuuna <hr/> Yuuna and the Haunted Hot Springs</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="13s.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Ushio Hinomaru <hr/> Hinomaru Sumo</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="14s.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Denji<hr/>Chainsaw Man</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="15s.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>One Arata <hr/> ne0;lation</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="16s.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Kagarite Higuma <hr/> Hell Warden Higuma</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="17s.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Fujita Ryunosuke <hr/>The Last Saiyuki</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="18s.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Kamio Yui <hr/> Yui Kamio Lets Loose</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="19s.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>David<hr/>Teenage Renaissance! David</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="20s.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Hinomoto Japan<hr/>I'm From Japan</h2></div>
   </div>
 </div>
 </div><!-- end headshot -->
