--- a/TOC/design/18_3637/index.html
+++ b/TOC/design/18_3637/index.html
@@ -53,125 +53,132 @@
 <h1>Weekly Shonen Jump #36・37 2018 Group Cover Designs</h1>
 
 
+
 <div class="responsive">
   <div class="gallery">
       <img src="01.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Luffy</h2></div>
+	    <div class="desc"><h2>Monkey D. Luffy <hr/> ONE PIECE </h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="02.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Deku</h2></div>
+	    <div class="desc"><h2>Midoriya Izuku <hr/> My Hero Academia</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="03.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Hinata Shoyo<hr/> Haikyu!!</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="04.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Asta <hr/> Black Clover</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="05.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Emma <hr/> The Promised Neverland</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="06.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Ishigami Senku <hr/> Dr.Stone</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="07.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Sakata Gintoki<hr/> Gintama</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="08.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Kamado Tanjiro <hr/> Kimetsu no Yaiba</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="09.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Ogata Rizu &amp; Furuhashi Fumino <hr/> We Never Learn</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="10.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Yonagi Kei <hr/> act-age</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="11.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Itadori Yuji <hr/> Jujutsu Kaisen</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="12.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Ushio Hinomaru <hr/> Hinomaru Sumo</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="13.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Yukihira Soma <hr/> Shokugeki no Soma</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="14.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Yunohana Yuuna <hr/> Yuuna and the Haunted Hot Springs</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="15.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Kuramichi Sakura <hr/> Momiji no Kisetsu</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="16.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Sorajima Hajime <hr/> Invade You!</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="17.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Tanaka Seiji<hr/>Seiji Tanaka: Secretary to the Managing President, General Time Industries</h2></div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
       <img src="18.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Noah Umberbach <hr/> Noah's Notes</h2></div>
   </div>
 </div>
 <div class="responsive">
-  <div class="gallery" style="border: 2px solid red;">
+  <div class="gallery">
       <img src="19.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2> place holder</h2></div>
+	    <div class="desc"><h2>Suzuki Taiyo <hr/> Alice &amp; Taiyo</h2></div>
   </div>
 </div>
 
 <div class="clearfix"></div>
 	
 	<p style="border-top: 1px solid black"> </p>
-
+<div class="footer">
+	<p></p>
+    	<p>Created by ManganiMY | Original Source: Weekly Shonen Jump LINE account</p>
+    <p>Give me a tip so I can buy coffee to help keep me sane during coding sessions <a href="https://ko-fi.com/manganimy">| ko&#8211;fi</a></p>
+	
+<p></p>
+</div>	   
 	  
   </div><!-- end content -->	
 </div> <!-- end margin -->
