--- a/TOC/design/19_2223/index.html
+++ b/TOC/design/19_2223/index.html
@@ -175,11 +175,9 @@
   </div>
 </div>
 
-</div>
 </div><!-- end fullbody -->
-
-<div class="clearfix"></div>
-<p style="border-top: 2px solid red"> </p>
+<p>&nbsp;</p>
+<hr class="hr1" />
 
 <div class="headshot">
 
@@ -307,8 +305,13 @@
 <div class="clearfix"></div>
 	
 	<p style="border-top: 1px solid black"> </p>
-
-	  
+<div class="footer">
+	<p></p>
+    	<p>Created by ManganiMY | Original Source: Weekly Shonen Jump LINE account</p>
+    <p>Give me a tip so I can buy coffee to help keep me sane during coding sessions <a href="https://ko-fi.com/manganimy">| ko&#8211;fi</a></p>
+	
+<p></p>
+</div>	
   </div><!-- end content -->	
 </div> <!-- end margin -->
 </body>
