--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -70,17 +70,19 @@
       <a href="#sam8" >&gt;&gt; Samurai 8: The Tale of Hachimaru</a>    
       <p style="background:none">Jump&#43;</p>
 <a href="#plus" >&gt;&gt; Latest Volume Data</a>
-<p style="background:none; font-size:.7em;"> Ongoing series </p>
-<a href="#hananochi" >&gt;&gt; Hana&nbsp;Nochi&nbsp;Hare</a>
-<a href="#letoile" >&gt;&gt; Shokugeki&nbsp;no&nbsp;Soma:&nbsp;L'étoile</a>
+<p style="background:none; font-size:.7em;"> Ongoing series </p>	
+<a href="#hananochi" >&gt;&gt; Hana&nbsp;Nochi&nbsp;Hare～Boys&nbsp;Over&nbsp;Flowers&nbsp;Next&nbsp;Season～</a>
 <a href="#weh" >&gt;&gt; World's End Harem</a>
 <a href="#aoflag" >&gt;&gt; Blue Flag</a>	
 <a href="#vigilante" >&gt;&gt; VIGILANTE My Hero Academia ILLEGALS</a>
 <a href="#aharen" >&gt;&gt; Aharen-san wa Hakarenai</a>
-<a href="#monesan" >&gt;&gt; Mone-san no Majime Sugiru Tsukiaikata</a>
 <a href="#saotome" >&gt;&gt; Saotome Shimai Ha Manga no Tame Nara!?</a>	
 <a href="#ditf" >&gt;&gt; Darling in the Franxx</a>
-<a href="#jigo" >&gt;&gt; Jigokuraku</a>	    
+<a href="#jigo" >&gt;&gt; Jigokuraku</a>
+<a href="#sxf" >&gt;&gt; SPY×FAMILY</a>
+<p style="background:none; font-size:.7em;"> Ongoing series </p>
+<a href="#monesan" >&gt;&gt; Mone-san no Majime Sugiru Tsukiaikata</a>
+<a href="#letoile" >&gt;&gt; Shokugeki&nbsp;no&nbsp;Soma:&nbsp;L'étoile</a>		    
     </div>
     </div>
   </div> 
@@ -705,15 +707,17 @@
 <a href="#plus" >&gt;&gt; Latest Volume Data</a>
 <p style="font-size:.9em;"> Ongoing series </p>	
 <a href="#hananochi" >&gt;&gt; Hana&nbsp;Nochi&nbsp;Hare～Boys&nbsp;Over&nbsp;Flowers&nbsp;Next&nbsp;Season～</a>
-<a href="#letoile" >&gt;&gt; Shokugeki&nbsp;no&nbsp;Soma:&nbsp;L'étoile</a>
 <a href="#weh" >&gt;&gt; World's End Harem</a>
 <a href="#aoflag" >&gt;&gt; Blue Flag</a>	
 <a href="#vigilante" >&gt;&gt; VIGILANTE My Hero Academia ILLEGALS</a>
 <a href="#aharen" >&gt;&gt; Aharen-san wa Hakarenai</a>
-<a href="#monesan" >&gt;&gt; Mone-san no Majime Sugiru Tsukiaikata</a>
 <a href="#saotome" >&gt;&gt; Saotome Shimai Ha Manga no Tame Nara!?</a>	
 <a href="#ditf" >&gt;&gt; Darling in the Franxx</a>
-<a href="#jigo" >&gt;&gt; Jigokuraku</a>	
+<a href="#jigo" >&gt;&gt; Jigokuraku</a>
+<a href="#sxf" >&gt;&gt; SPY×FAMILY</a>
+<p style="font-size:.9em;"> Ongoing series </p>
+<a href="#monesan" >&gt;&gt; Mone-san no Majime Sugiru Tsukiaikata</a>
+<a href="#letoile" >&gt;&gt; Shokugeki&nbsp;no&nbsp;Soma:&nbsp;L'étoile</a>	
 </div>
 </div>
 	</div> <!-- end margin -->
