--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -80,7 +80,7 @@
 <a href="#ditf" >&gt;&gt; Darling in the Franxx</a>
 <a href="#jigo" >&gt;&gt; Jigokuraku</a>
 <a href="#sxf" >&gt;&gt; SPY×FAMILY</a>
-<p style="background:none; font-size:.7em;"> Ongoing series </p>
+<p style="background:none; font-size:.7em;"> Completed series </p>
 <a href="#monesan" >&gt;&gt; Mone-san no Majime Sugiru Tsukiaikata</a>
 <a href="#letoile" >&gt;&gt; Shokugeki&nbsp;no&nbsp;Soma:&nbsp;L'étoile</a>		    
     </div>
@@ -715,7 +715,7 @@
 <a href="#ditf" >&gt;&gt; Darling in the Franxx</a>
 <a href="#jigo" >&gt;&gt; Jigokuraku</a>
 <a href="#sxf" >&gt;&gt; SPY×FAMILY</a>
-<p style="font-size:.9em;"> Ongoing series </p>
+<p style="font-size:.9em;"> Completed series </p>
 <a href="#monesan" >&gt;&gt; Mone-san no Majime Sugiru Tsukiaikata</a>
 <a href="#letoile" >&gt;&gt; Shokugeki&nbsp;no&nbsp;Soma:&nbsp;L'étoile</a>	
 </div>
