--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -461,15 +461,15 @@
 <p></p>
 <span>
 ｜Week&nbsp;1 (F)｜Week&nbsp;2｜Week&nbsp;3｜Week&nbsp;4｜Week&nbsp;5┃OriconLTD (DIP)┃Pub.&nbsp;Date&nbsp;｜Title
-<br>｜*28581 (5)｜------｜------｜------｜------┃*,248,711 (320)┃2018/07/04｜Jujutsu&nbsp;Kaisen&nbsp;1
-<br>｜*51908 (6)｜*69047｜------｜------｜------┃*,228,799 (258)┃2018/09/04｜Jujutsu&nbsp;Kaisen&nbsp;2
-<br>｜*83100 (6)｜102143｜------｜------｜------┃*,209,250 (167)┃2018/12/04｜Jujutsu&nbsp;Kaisen&nbsp;3
-<br>｜*99031 (7)｜121839｜135646｜******｜154227┃*,154,227 (*35)┃2019/03/04｜Jujutsu&nbsp;Kaisen&nbsp;4
-<br>｜*83006 (4)｜123986｜141388｜******｜160129┃*,160,129 (*32)┃2019/05/02｜Jujutsu&nbsp;Kaisen&nbsp;5
-<br>｜*98500 (4)｜136161｜152250｜162156｜169575┃*,181,712 (*46)┃2019/07/04｜Jujutsu&nbsp;Kaisen&nbsp;6
+<br>｜*28581 (5)｜------｜------｜------｜------┃*,325,475 (502)┃2018/07/04｜Jujutsu&nbsp;Kaisen&nbsp;1
+<br>｜*51908 (6)｜*69047｜------｜------｜------┃*,302,055 (440)┃2018/09/04｜Jujutsu&nbsp;Kaisen&nbsp;2
+<br>｜*83100 (6)｜102143｜------｜------｜------┃*,279,434 (349)┃2018/12/04｜Jujutsu&nbsp;Kaisen&nbsp;3
+<br>｜*99031 (7)｜121839｜135646｜******｜154227┃*,259,245 (259)┃2019/03/04｜Jujutsu&nbsp;Kaisen&nbsp;4
+<br>｜*83006 (4)｜123986｜141388｜******｜160129┃*,242,985 (200)┃2019/05/02｜Jujutsu&nbsp;Kaisen&nbsp;5
+<br>｜*98500 (4)｜136161｜152250｜162156｜169575┃*,226,142 (137)┃2019/07/04｜Jujutsu&nbsp;Kaisen&nbsp;6
 <br>｜*88157 (3)｜138855｜161782｜174112｜180772┃*,189,967 (*45)┃2019/10/04｜Jujutsu&nbsp;Kaisen&nbsp;7
 <br>
-<br>｜*70774 (6)｜------｜------｜------｜------┃*,177,868 (167)┃2018/12/04｜Jujutsu&nbsp;Kaisen&nbsp;0&nbsp;Tokyo&nbsp;Metropolitan&nbsp;Magic&nbsp;Technical&nbsp;School
+<br>｜*70774 (6)｜------｜------｜------｜------┃*,235,571 (349)┃2018/12/04｜Jujutsu&nbsp;Kaisen&nbsp;0&nbsp;Tokyo&nbsp;Metropolitan&nbsp;Magic&nbsp;Technical&nbsp;School
 </span>	
 		  <p style="border-bottom: 1px solid black;margin-top:50px"></p>
 <strong id="csm" style="padding-top:50px">Chainsaw Man</strong>
