--- a/TOC/amazon/index.html
+++ b/TOC/amazon/index.html
@@ -1,40 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <style>
-            table {
-                border-collapse: collapse;
-                border: 2px black solid;
-                font: 12px sans-serif;
-            }
+<meta charset="utf-8">
+<body>
+<script src="https://d3js.org/d3.v3.min.js"></script>
+  <script>
 
-            td {
-                border: 1px black solid;
-                padding: 5px;
-            }
-        </style>
-    </head>
-    <body>
-        <!-- <script src="http://d3js.org/d3.v3.min.js"></script> -->
-        <script src="d3.min.js?v=3.2.8"></script>
+  d3.tsv("amazon.tsv", function(error, data){
 
-        <script type="text/javascript"charset="utf-8">
-            d3.text("amazon.tsv", function(data) {
-                var parsedCSV = d3.tsv.parseRows(data);
+    var table = d3.select("body").append("table"),
+        tbody = table.append("tbody");
 
-                var container = d3.select("body")
-                    .append("table")
+    var rows = tbody.selectAll("tr")
+      .data(data)
+    .enter()
+      .append("tr");
 
-                    .selectAll("tr")
-                        .data(parsedCSV).enter()
-                        .append("tr")
+    var cells = rows.selectAll("td")
+      .data(function(row) {
+          return d3.range(Object.keys(row).length).map(function(column, i) {
+              return row[Object.keys(row)[i]];
+          });
+      })
+    .enter()
+      .append("td")
+      .text(function(d) { return d; });
 
-                    .selectAll("td")
-                        .data(function(d) { return d; }).enter()
-                        .append("td")
-                        .text(function(d) { return d; });
-            });
-        </script>
-    </body>
+  });
+
+  </script> 
+</body>
+
 </html>
