--- a/TOC/amazon/index.html
+++ b/TOC/amazon/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+<head> 
 <meta charset="utf-8">
+    <style>
+            table {
+                border-collapse: collapse;
+                border: 2px black solid;
+                font: 12px sans-serif;
+            }
+
+            td {
+                border: 1px black solid;
+                padding: 5px;
+            }
+        </style>
+</head
 <body>
 <script src="https://d3js.org/d3.v3.min.js"></script>
   <script>
