--- a/TOC/amazon/index.html
+++ b/TOC/amazon/index.html
@@ -13,9 +13,13 @@
                 border: 1px black solid;
                 padding: 5px;
             }
+            .data{
+                font-family: "Courier New", Courier, monospace  ;
+        }
         </style>
 </head
 <body>
+<div class="data">    
 <script src="https://d3js.org/d3.v3.min.js"></script>
   <script>
 
@@ -42,6 +46,8 @@
   });
 
   </script> 
+    
+    </div>     
 </body>
 
 </html>
