--- a/TOC/amazon/index.html
+++ b/TOC/amazon/index.html
@@ -14,6 +14,10 @@
                 padding: 5px;
             }
             .data{
+                    display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                width 80%;                
                 font-family: "Courier New", Courier, monospace  ;
         }
         </style>
