--- a/TOC/amazon/index.html
+++ b/TOC/amazon/index.html
@@ -13,7 +13,7 @@
                 border: 1px black solid;
                 padding: 5px;
             }
-            .data{
+            body{
                     display: block;
                     margin-left: auto;
                     margin-right: auto;
@@ -23,7 +23,6 @@
         </style>
 </head
 <body>
-<div class="data">    
 <script src="https://d3js.org/d3.v3.min.js"></script>
   <script>
 
@@ -50,8 +49,7 @@
   });
 
   </script> 
-    
-    </div>     
+        
 </body>
 
 </html>
