--- a/TOC/amazon/index.html
+++ b/TOC/amazon/index.html
@@ -8,7 +8,10 @@
                 border: 2px black solid;
                 font: 12px;
                 font-family: "Courier New", Courier, monospace  ;              
-                
+                display: float;
+ 		 margin-left: auto;
+		  margin-right: auto;
+		  max-width: 90%;			
 				}
             td {
                 border: 1px black solid;
