--- a/TOC/amazon/index.html
+++ b/TOC/amazon/index.html
@@ -3,28 +3,21 @@
 
 <head>
 	<meta charset='UTF-8'>
-	
-	<title>Shonen Jump Amazon Ranking</title>
-	
+	<title>Weekly Shonen Jump Volumes Amazon Ranking</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
-
 <link rel="stylesheet" type="text/css" href="style.css">
 
 	<script src="https://d3js.org/d3.v4.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
-
 <body>
-
 	<div id="page-wrap">
 
-	<h1>Shonen Jump Amazon Ranking</h1>
+	<h1>Weekly Shonen Jump Volumes Amazon Ranking</h1>
     <br>
 	<p class="timestamp"></p>
 
 	</div>
-
 	 <script>
     $.getJSON('https://manganimy.github.io/TOC/amazon/timestamp.json', function(data) {
         
@@ -65,5 +58,4 @@
 	  });
 	</script>
 </body>
-
 </html>
