--- a/TOC/amazon/index.html
+++ b/TOC/amazon/index.html
@@ -16,15 +16,18 @@
 </head>
 
 <body>
-
+	<div id="header">
+	<h2>Shonen Jump Amazon Ranking</h2>
+	<p class="timestamp"></p>
+	</div>
+	<hr/>
 	<div id="page-wrap">
 
-	<h1>Shonen Jump Amazon Ranking</h1>
-    <br>
-	<p class="timestamp"></p>
-
 	</div>
-
+	<hr/>
+	<div id="footer">
+	<p> footer </p>
+	</div>
 	 <script>
 	 var dropbox_json = "https://dl.dropboxusercontent.com/s/h0wriawz3khwi9p/timestamp.json?dl=1"
     $.getJSON(dropbox_json, function(data) {
