--- a/TOC/index.html
+++ b/TOC/index.html
@@ -83,6 +83,10 @@
 <h2><a href="20_0607/" style="display:block; width:100%">Weekly Shonen Jump #06・07 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="20_0607/">
   <img src="img/20_0607.jpg">
+</a>
+<h2><a href="20_08/" style="display:block; width:100%">Weekly Shonen Jump #08 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="20_08/">
+  <img src="img/20_08.jpg">
 </a>		  
 <br>
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
