--- a/TOC/index.html
+++ b/TOC/index.html
@@ -107,6 +107,10 @@
 <h2><a href="20_13/" style="display:block; width:100%">Weekly Shonen Jump #13 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="20_13/">
   <img src="img/20_13.jpg">
+</a>
+<h2><a href="20_14/" style="display:block; width:100%">Weekly Shonen Jump #14 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="20_14/">
+  <img src="img/20_14.jpg">
 </a>			  
 <br>
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
