--- a/TOC/design/index.html
+++ b/TOC/design/index.html
@@ -58,7 +58,7 @@
   <div class="gallery">
   <a href="18_2122">
       <img src="18_2122.jpg" alt="">
-	    <div class="desc"><h2> #21・22 2018></h2></div></a>
+	    <div class="desc"><h2> #21・22 2018</h2></div></a>
   </div>
 </div>
 <div class="responsive">
