--- a/TOC/index.html
+++ b/TOC/index.html
@@ -115,6 +115,10 @@
 <h2><a href="20_15/" style="display:block; width:100%">Weekly Shonen Jump #15 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="20_15/">
   <img src="img/20_15.jpg">
+</a>
+<h2><a href="20_16/" style="display:block; width:100%">Weekly Shonen Jump #16 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="20_16/">
+  <img src="img/20_16.jpg">
 </a>		  
 <br>
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
