--- a/TOC/index.html
+++ b/TOC/index.html
@@ -41,8 +41,8 @@
 	 <button class="dropbtn" onclick="myFunction(this)">SP
       <i class="fa fa-caret-down"></i>
     </button>
-    <div class="dropdown-content" id="myDropdown2">
       <a href="giga">GIGA</a>
+    <div class="dropdown-content" id="myDropdown2">
     </div>
   </div> 	
   <div class="lang">
@@ -119,6 +119,10 @@
 <h2><a href="20_16/" style="display:block; width:100%">Weekly Shonen Jump #16 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="20_16/">
   <img src="img/20_16.jpg">
+</a>
+<h2><a href="20_17/" style="display:block; width:100%">Weekly Shonen Jump #17 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="20_17/">
+  <img src="img/20_17.jpg">
 </a>		  
 <br>
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
