--- a/TOC/index.html
+++ b/TOC/index.html
@@ -123,7 +123,23 @@
 <h2><a href="20_17/" style="display:block; width:100%">Weekly Shonen Jump #17 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="20_17/">
   <img src="img/20_17.jpg">
-</a>		  
+</a>
+<h2><a href="20_18/" style="display:block; width:100%">Weekly Shonen Jump #18 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="20_18/">
+  <img src="img/20_18.jpg">
+</a>	
+<h2><a href="20_19/" style="display:block; width:100%">Weekly Shonen Jump #19 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="20_19/">
+  <img src="img/20_19.jpg">
+</a>	
+<h2><a href="20_20/" style="display:block; width:100%">Weekly Shonen Jump #20 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="20_20/">
+  <img src="img/20_20.jpg">
+</a>	
+<h2><a href="20_2122/" style="display:block; width:100%">Weekly Shonen Jump #21・22 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="20_2122/">
+  <img src="img/20_2122.jpg">
+</a>			  
 <br>
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
 	<p style="border-top: 2px solid yellow"> </p>
