--- a/TOC/reprint/index.html
+++ b/TOC/reprint/index.html
@@ -12,13 +12,10 @@
   <link rel="shortcut icon"
    type="image/x-icon"
         href="fav.ico">
- <title>Home</title> 
+ <title>Shueisha Manga Reprints List</title> 
  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta property="og:title" content="Manga Magazines TOC Hub">
-<meta property="og:description" content="Archive of Manga Magazine TOCs and Author Comments">
-<meta property="og:image" content="https://manganimy.github.io/head.jpg">
-<meta property="og:url" content="https://manganimy.github.io">
-<meta name="twitter:card" content="summary_large_image">
+<meta property="og:title" content="Shueisha Manga Reprints List">
+<meta property="og:description" content="Log for Shuiesha manga reprints">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">	
  <style>
 body {
