--- a/TOC/reprint/index.html
+++ b/TOC/reprint/index.html
@@ -17,7 +17,7 @@
  <title>Shueisha Manga Reprints List</title> 
  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta property="og:title" content="Shueisha Manga Reprints List">
-<meta property="og:description" content="Log for Shuiesha manga reprints">
+<meta property="og:description" content="Log for Shueisha manga reprints">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">	
 <link rel="stylesheet" type="text/css" href="reprint.css">
 <link rel="stylesheet" type="text/css" href="issue.css">
