--- a/TOC/index.html
+++ b/TOC/index.html
@@ -139,6 +139,18 @@
 <h2><a href="20_2122/" style="display:block; width:100%">Weekly Shonen Jump #21・22 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="20_2122/">
   <img src="img/20_2122.jpg">
+</a>
+<h2><a href="20_23/" style="display:block; width:100%">Weekly Shonen Jump #23 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="20_23/">
+  <img src="img/20_23.jpg">
+</a>
+<h2><a href="20_24/" style="display:block; width:100%">Weekly Shonen Jump #24 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="20_24/">
+  <img src="img/20_24.jpg">
+</a>
+<h2><a href="20_25/" style="display:block; width:100%">Weekly Shonen Jump #25 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="20_25/">
+  <img src="img/20_25.jpg">
 </a>			  
 <br>
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
