--- a/TOC/index.html
+++ b/TOC/index.html
@@ -151,7 +151,11 @@
 <h2><a href="20_25/" style="display:block; width:100%">Weekly Shonen Jump #25 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="20_25/">
   <img src="img/20_25.jpg">
-</a>			  
+</a>
+<h2><a href="20_26/" style="display:block; width:100%">Weekly Shonen Jump #26 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="20_26/">
+  <img src="img/20_26.jpg">
+</a>				  
 <br>
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
 	<p style="border-top: 2px solid yellow"> </p>
