new reprints, add 27

--- a/TOC/reprint/index.html
+++ b/TOC/reprint/index.html
@@ -70,6 +70,43 @@
   <td height=19 class=xl632148 style='height:14.4pt;font-size:11.0pt;
   color:black;font-weight:700;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:Calibri, sans-serif;border-top:none;
+  border-right:none;border-bottom:.5pt solid #8EA9DB;border-left:none'>8-Jun-2020</td>
+ </tr>
+ <tr height=0 style='display:none'>
+  <td class=xl662148 style='font-size:11.0pt;color:black;font-weight:700;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif'></td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl642148 style='height:14.4pt'>06/25<span
+  style='mso-spacerun:yes'>  </span>MASHLE 1</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl642148 style='height:14.4pt'>06/30<span
+  style='mso-spacerun:yes'>  </span>Jujutsu Kaisen 11</td>
+ </tr>
+ <tr height=0 style='display:none'>
+  <td class=xl662148 style='font-size:11.0pt;color:black;font-weight:700;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif'></td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl642148 style='height:14.4pt'><span
+  style='mso-spacerun:yes'>  </span>-</td>
+ </tr>
+ <tr height=0 style='display:none'>
+  <td class=xl662148 style='font-size:11.0pt;color:black;font-weight:700;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif'></td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl642148 style='height:14.4pt'>08/03<span
+  style='mso-spacerun:yes'>  </span>Kochikame 65-96</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl632148 style='height:14.4pt;font-size:11.0pt;
+  color:black;font-weight:700;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:Calibri, sans-serif;border-top:none;
   border-right:none;border-bottom:.5pt solid #8EA9DB;border-left:none'>2-Jun-2020</td>
  </tr>
  <tr height=0 style='display:none'>
@@ -888,6 +925,16 @@
   <td height=19 class=xl6411109 style='height:14.4pt;font-size:11.0pt;
   color:black;font-weight:700;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:Calibri, sans-serif;border-top:none;
+  border-right:none;border-bottom:.5pt solid #8EA9DB;border-left:none'>08/03</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6311109 style='height:14.4pt'>Kochikame<span
+  style='mso-spacerun:yes'>  </span>65-96</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6411109 style='height:14.4pt;font-size:11.0pt;
+  color:black;font-weight:700;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:Calibri, sans-serif;border-top:none;
   border-right:none;border-bottom:.5pt solid #8EA9DB;border-left:none'>07/10</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
@@ -903,6 +950,16 @@
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl6311109 style='height:14.4pt'>Kimetsu no Yaiba<span
   style='mso-spacerun:yes'>  </span>21</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6411109 style='height:14.4pt;font-size:11.0pt;
+  color:black;font-weight:700;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:Calibri, sans-serif;border-top:none;
+  border-right:none;border-bottom:.5pt solid #8EA9DB;border-left:none'>06/30</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6311109 style='height:14.4pt'>Jujutsu Kaisen<span
+  style='mso-spacerun:yes'>  </span>11</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl6411109 style='height:14.4pt;font-size:11.0pt;
@@ -935,6 +992,10 @@
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl6311109 style='height:14.4pt'>Kimetsu no Yaiba<span
   style='mso-spacerun:yes'>  </span>20</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6311109 style='height:14.4pt'>MASHLE<span
+  style='mso-spacerun:yes'>  </span>1</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl6311109 style='height:14.4pt'>SPYxFAMILY<span
