--- a/TOC/index.html
+++ b/TOC/index.html
@@ -155,6 +155,10 @@
 <h2><a href="20_26/" style="display:block; width:100%">Weekly Shonen Jump #26 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="20_26/">
   <img src="img/20_26.jpg">
+</a>
+<h2><a href="20_27/" style="display:block; width:100%">Weekly Shonen Jump #27 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="20_27/">
+  <img src="img/20_27.jpg">
 </a>				  
 <br>
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
