--- a/TOC/reprint/index.html
+++ b/TOC/reprint/index.html
@@ -70,6 +70,25 @@
   <td height=19 class=xl652148 style='height:14.4pt;font-size:11.0pt;
   color:black;font-weight:700;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:Calibri, sans-serif;border-top:none;
+  border-right:none;border-bottom:.5pt solid #8EA9DB;border-left:none'>11-Jun-2020</td>
+ </tr>
+ <tr height=0 style='display:none'>
+  <td class=xl682148 style='font-size:11.0pt;color:black;font-weight:700;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif'></td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl662148 style='height:14.4pt'>07/03<span
+  style='mso-spacerun:yes'>  </span>Slam Dunk Refurbished 1-10</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl662148 style='height:14.4pt'>07/06<span
+  style='mso-spacerun:yes'>  </span>Slam Dunk Refurbished 11-20</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl652148 style='height:14.4pt;font-size:11.0pt;
+  color:black;font-weight:700;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:Calibri, sans-serif;border-top:none;
   border-right:none;border-bottom:.5pt solid #8EA9DB;border-left:none'>10-Jun-2020</td>
  </tr>
  <tr height=0 style='display:none'>
@@ -1014,7 +1033,6 @@
 
 </div>
 
-
 </div>
 
   <div id="byDate" class="w3-container type" style="display:none">
@@ -1122,6 +1140,20 @@
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl6511109 style='height:14.4pt'>Let's!! Haikyu!!?<span
   style='mso-spacerun:yes'>  </span>1-3, 5</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6511109 style='height:14.4pt'>Slam Dunk
+  Refurbished<span style='mso-spacerun:yes'>  </span>11-20</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6611109 style='height:14.4pt;font-size:11.0pt;
+  color:black;font-weight:700;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:Calibri, sans-serif;border-top:none;
+  border-right:none;border-bottom:.5pt solid #8EA9DB;border-left:none'>07/03</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6511109 style='height:14.4pt'>Slam Dunk
+  Refurbished<span style='mso-spacerun:yes'>  </span>1-10</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl6611109 style='height:14.4pt;font-size:11.0pt;
