--- a/TOC/reprint/index.html
+++ b/TOC/reprint/index.html
@@ -193,7 +193,7 @@
  </tr>
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl662148 style='height:14.4pt'>06/22<span
-  style='mso-spacerun:yes'>  </span>Otokozaka 1</td>
+  style='mso-spacerun:yes'>  </span>Otokozaka 6</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl652148 style='height:14.4pt;font-size:11.0pt;
@@ -286,7 +286,7 @@
   font-family:Calibri, sans-serif'></td>
  </tr>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl662148 style='height:14.4pt'>06/11<span
+  <td height=19 class=xl662148 style='height:14.4pt'>06/15<span
   style='mso-spacerun:yes'>  </span>Undead Unluck 1</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
@@ -1245,7 +1245,7 @@
  </tr>
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl6511109 style='height:14.4pt'>Otokozaka<span
-  style='mso-spacerun:yes'>  </span>1</td>
+  style='mso-spacerun:yes'>  </span>6</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl6611109 style='height:14.4pt;font-size:11.0pt;
@@ -1257,6 +1257,16 @@
   <td height=19 class=xl6511109 style='height:14.4pt'>Slam Dunk
   Refurbished<span style='mso-spacerun:yes'>  </span>6-9</td>
  </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6611109 style='height:14.4pt;font-size:11.0pt;
+  color:black;font-weight:700;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:Calibri, sans-serif;border-top:none;
+  border-right:none;border-bottom:.5pt solid #8EA9DB;border-left:none'>06/15</td>
+ </tr>	
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6511109 style='height:14.4pt'>Undead Unluck<span
+  style='mso-spacerun:yes'>  </span>1</td>
+ </tr>	
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl6611109 style='height:14.4pt;font-size:11.0pt;
   color:black;font-weight:700;text-decoration:none;text-underline-style:none;
@@ -1327,10 +1337,6 @@
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl6511109 style='height:14.4pt'>My Hero Academia:
   Vigilantes<span style='mso-spacerun:yes'>  </span>2</td>
- </tr>
- <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl6511109 style='height:14.4pt'>Undead Unluck<span
-  style='mso-spacerun:yes'>  </span>1</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl6611109 style='height:14.4pt;font-size:11.0pt;
