--- a/TOC/reprint/index.html
+++ b/TOC/reprint/index.html
@@ -70,6 +70,47 @@
   <td height=19 class=xl652148 style='height:14.4pt;font-size:11.0pt;
   color:black;font-weight:700;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:Calibri, sans-serif;border-top:none;
+  border-right:none;border-bottom:.5pt solid #8EA9DB;border-left:none'>18-Jun-2020</td>
+ </tr>
+ <tr height=0 style='display:none'>
+  <td class=xl682148 style='font-size:11.0pt;color:black;font-weight:700;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif'></td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl662148 style='height:14.4pt'>07/15<span
+  style='mso-spacerun:yes'>  </span>Kimetsu no Yaiba 1-10</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl662148 style='height:14.4pt'>07/16<span
+  style='mso-spacerun:yes'>  </span>Kimetsu no Yaiba 11-20</td>
+ </tr>
+ <tr height=0 style='display:none'>
+  <td class=xl682148 style='font-size:11.0pt;color:black;font-weight:700;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif'></td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl662148 style='height:14.4pt'><span
+  style='mso-spacerun:yes'>  </span>-</td>
+ </tr>
+ <tr height=0 style='display:none'>
+  <td class=xl682148 style='font-size:11.0pt;color:black;font-weight:700;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif'></td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl662148 style='height:14.4pt'>07/07<span
+  style='mso-spacerun:yes'>  </span>Kono Oto Tomare! 11-19, 22</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl662148 style='height:14.4pt'>07/09<span
+  style='mso-spacerun:yes'>  </span>Undead Unluck 1, 2</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl652148 style='height:14.4pt;font-size:11.0pt;
+  color:black;font-weight:700;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:Calibri, sans-serif;border-top:none;
   border-right:none;border-bottom:.5pt solid #8EA9DB;border-left:none'>11-Jun-2020</td>
  </tr>
  <tr height=0 style='display:none'>
@@ -193,7 +234,7 @@
  </tr>
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl662148 style='height:14.4pt'>06/22<span
-  style='mso-spacerun:yes'>  </span>Otokozaka 1</td>
+  style='mso-spacerun:yes'>  </span>Otokozaka 6</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl652148 style='height:14.4pt;font-size:11.0pt;
@@ -286,7 +327,7 @@
   font-family:Calibri, sans-serif'></td>
  </tr>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl662148 style='height:14.4pt'>06/11<span
+  <td height=19 class=xl662148 style='height:14.4pt'>06/15<span
   style='mso-spacerun:yes'>  </span>Undead Unluck 1</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
@@ -1043,11 +1084,11 @@
  collapse;table-layout:fixed;width:328pt'>
  <col width=438 style='mso-width-source:userset;mso-width-alt:15559;width:328pt'>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl1511109 align=left width=438 style='height:14.4pt;
-  width:328pt;font-size:11.0pt;color:black;font-weight:700;text-decoration:
-  none;text-underline-style:none;text-line-through:none;font-family:Calibri, sans-serif;
-  border-top:none;border-right:none;border-bottom:.5pt solid #8EA9DB;
-  border-left:none;background:#D9E1F2;mso-pattern:#D9E1F2 none'><span
+  <td height=19 class=xl1511109 width=438 style='height:14.4pt;width:328pt;
+  font-size:11.0pt;color:black;font-weight:700;text-decoration:none;text-underline-style:
+  none;text-line-through:none;font-family:Calibri, sans-serif;border-top:none;
+  border-right:none;border-bottom:.5pt solid #8EA9DB;border-left:none;
+  background:#D9E1F2;mso-pattern:#D9E1F2 none'><span
   style='mso-spacerun:yes'> </span></td>
  </tr>
  <tr height=19 style='height:14.4pt'>
@@ -1059,6 +1100,26 @@
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl6511109 style='height:14.4pt'>Kochikame<span
   style='mso-spacerun:yes'>  </span>65-96</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6611109 style='height:14.4pt;font-size:11.0pt;
+  color:black;font-weight:700;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:Calibri, sans-serif;border-top:none;
+  border-right:none;border-bottom:.5pt solid #8EA9DB;border-left:none'>07/16</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6511109 style='height:14.4pt'>Kimetsu no Yaiba<span
+  style='mso-spacerun:yes'>  </span>11-20</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6611109 style='height:14.4pt;font-size:11.0pt;
+  color:black;font-weight:700;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:Calibri, sans-serif;border-top:none;
+  border-right:none;border-bottom:.5pt solid #8EA9DB;border-left:none'>07/15</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6511109 style='height:14.4pt'>Kimetsu no Yaiba<span
+  style='mso-spacerun:yes'>  </span>1-10</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl6611109 style='height:14.4pt;font-size:11.0pt;
@@ -1087,6 +1148,16 @@
   <td height=19 class=xl6611109 style='height:14.4pt;font-size:11.0pt;
   color:black;font-weight:700;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:Calibri, sans-serif;border-top:none;
+  border-right:none;border-bottom:.5pt solid #8EA9DB;border-left:none'>07/09</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6511109 style='height:14.4pt'>Undead Unluck<span
+  style='mso-spacerun:yes'>  </span>1, 2</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6611109 style='height:14.4pt;font-size:11.0pt;
+  color:black;font-weight:700;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:Calibri, sans-serif;border-top:none;
   border-right:none;border-bottom:.5pt solid #8EA9DB;border-left:none'>07/08</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
@@ -1110,6 +1181,10 @@
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl6511109 style='height:14.4pt'>Jujutsu Kaisen<span
   style='mso-spacerun:yes'>  </span>1-10</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6511109 style='height:14.4pt'>Kono Oto Tomare!<span
+  style='mso-spacerun:yes'>  </span>11-19, 22</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl6511109 style='height:14.4pt'>Summer Time
@@ -1245,7 +1320,7 @@
  </tr>
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl6511109 style='height:14.4pt'>Otokozaka<span
-  style='mso-spacerun:yes'>  </span>1</td>
+  style='mso-spacerun:yes'>  </span>6</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl6611109 style='height:14.4pt;font-size:11.0pt;
@@ -1278,6 +1353,16 @@
  </tr>
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl6511109 style='height:14.4pt'>Haikyu-bu!!<span
+  style='mso-spacerun:yes'>  </span>1</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6611109 style='height:14.4pt;font-size:11.0pt;
+  color:black;font-weight:700;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:Calibri, sans-serif;border-top:none;
+  border-right:none;border-bottom:.5pt solid #8EA9DB;border-left:none'>06/15</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6511109 style='height:14.4pt'>Undead Unluck<span
   style='mso-spacerun:yes'>  </span>1</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
@@ -1327,10 +1412,6 @@
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl6511109 style='height:14.4pt'>My Hero Academia:
   Vigilantes<span style='mso-spacerun:yes'>  </span>2</td>
- </tr>
- <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl6511109 style='height:14.4pt'>Undead Unluck<span
-  style='mso-spacerun:yes'>  </span>1</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl6611109 style='height:14.4pt;font-size:11.0pt;
