--- a/TOC/reprint/print.html
+++ b/TOC/reprint/print.html
@@ -21,7 +21,31 @@
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">08/18</span></td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Undead Unluck  1, 2</td>
+    <td class="tg-7zrl">Undead Unluck  1-2</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">Tis Time for&nbsp;&nbsp;&nbsp;"Torture," Princess  1-2</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">Agravity Boys  1-2</td>
+  </tr>
+  <tr>
+    <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">08/17</span></td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">2.5D Seduction  1</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">Jigokuraku  1</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">SPYxFAMILY  1</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">Dosanko Gyaru is Mega&nbsp;&nbsp;&nbsp;Cute  1</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">Boukyaku Battery  1</td>
   </tr>
   <tr>
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">08/05</span></td>
