--- a/TOC/index.html
+++ b/TOC/index.html
@@ -159,6 +159,30 @@
 <h2><a href="20_27/" style="display:block; width:100%">Weekly Shonen Jump #27 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="20_27/">
   <img src="img/20_27.jpg">
+</a>
+<h2><a href="20_28/" style="display:block; width:100%">Weekly Shonen Jump #28 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="20_28/">
+  <img src="img/20_28.jpg">
+</a>
+<h2><a href="20_29/" style="display:block; width:100%">Weekly Shonen Jump #29 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="20_29/">
+  <img src="img/20_29.jpg">
+</a>
+<h2><a href="20_30/" style="display:block; width:100%">Weekly Shonen Jump #30 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="20_30/">
+  <img src="img/20_30.jpg">
+</a>
+<h2><a href="20_31/" style="display:block; width:100%">Weekly Shonen Jump #31 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="20_31/">
+  <img src="img/20_31.jpg">
+</a>
+<h2><a href="20_32/" style="display:block; width:100%">Weekly Shonen Jump #32 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="20_32/">
+  <img src="img/20_32.jpg">
+</a>
+<h2><a href="20_3334/" style="display:block; width:100%">Weekly Shonen Jump #33・34 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="20_3334/">
+  <img src="img/20_3334.jpg">
 </a>				  
 <br>
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
